# Rmpi

./: ChangeLog  DESCRIPTION  INDEX  MD5  README  cleanup  configure  configure.ac  configure.in  configure.win
R/: Deprecated.R  Rcoll.R  Rcomm.R  Rmpi.R  Rng.R  Rparutilities.R  sprng.R  zzz.R  zzz.R.in
demo/: 00Index  cslavePI.R  masterslavePI.R  simPI.R  simplePI.R  slave1PI.R  slave2PI.R
inst/: CITATION  Rmpi  Rprofile  Rslaves.bat  Rslaves.sh  Rslaves32.cmd  Rslaves64.bat  cslavePI.c  slavedaemon.R
man/: Deprecated.Rd  hosts.Rd  internal.Rd  mpi.abort.Rd  mpi.apply.Rd  mpi.barrier.Rd  mpi.bcast.Rd  mpi.bcast.Robj.Rd  mpi.bcast.cmd.Rd  mpi.bcast.send.Rd  mpi.bcast.send.Robj.Rd  mpi.cart.coords.Rd  mpi.cart.create.Rd  mpi.cart.get.Rd  mpi.cart.rank.Rd  mpi.cart.shift.Rd  mpi.cartdim.get.Rd  mpi.comm.Rd  mpi.comm.disconnect.Rd  mpi.comm.free.Rd  mpi.comm.inter.Rd  mpi.comm.set.errhandler.Rd  mpi.comm.spawn.Rd  mpi.const.Rd  mpi.dims.create.Rd  mpi.exit.Rd  mpi.finalize.Rd  mpi.gather.Rd  mpi.gather.Robj.Rd  mpi.get.count.Rd  mpi.get.processor.name.Rd  mpi.get.sourcetag.Rd  mpi.iapply.Rd  mpi.info.Rd  mpi.init.sprng.Rd  mpi.intercomm.merge.Rd  mpi.parSim.Rd  mpi.parallel.sim.Rd  mpi.parapply.Rd  mpi.probe.Rd  (+13 more)
src/: Makevars.in  Makevars.win  RegQuery.c  Rmpi.c  Rmpi.h  conversion.c  internal.c  sprng.c
