# Process this file with autoconf to produce a configure script.

AC_INIT(DESCRIPTION)

AC_ARG_WITH(mpi,
[   --with-mpi=/usr/local          Location of MPI library.],
[   if test "${withval}" = no; then
        supply_mpi=no
    else
        supply_mpi=yes
        MPI_ROOT=${withval}
    fi  ]
)

AC_CHECK_HEADER(mpi.h, [ MPI_INCLUDE="" ],
[   if test "${supply_mpi}" = yes; then
     	echo "Try to find mpi.h ..."
    	if test -f ${MPI_ROOT}/include/mpi.h; then
            echo "Found in ${MPI_ROOT}/include"
            MPI_INCLUDE="-I${MPI_ROOT}/include"
    	elif test -f /usr/include/lam/mpi.h; then
            echo "Found in /usr/include/lam"
	    MPI_INCLUDE="-I/usr/include/lam"
     	elif test -f /usr/local/include/mpi.h; then
            echo "Found in /usr/local/include"
	    MPI_INCLUDE="-I/usr/local/include"
   	else 
	    echo "Cannot find mpi head file"
	    echo "Please check if --with-mpi=${MPI_ROOT} is right"
	    exit 1
    	fi
    else
	echo "Try to find mpi.h ..."
    	if test -f /usr/include/lam/mpi.h; then
            echo "Found in /usr/include/lam"
            MPI_INCLUDE="-I/usr/include/lam"
    	elif test -f /usr/local/include/mpi.h; then
            echo "Found in /usr/local/include"
            MPI_INCLUDE="-I/usr/local/include"
    	else 
	    echo "Cannot find mpi header file."
	    echo "Please use --with-mpi=/path/to/mpi"
            exit 1  
       	fi
    fi 
]
)

echo "Try to find libmpi ..."
if test -f ${MPI_ROOT}/lib/libmpi.a; then
        echo "Found in ${MPI_ROOT}/lib"
        MPI_LIBS="-L${MPI_ROOT}/lib -lmpi"
else
    AC_CHECK_LIB(mpi, main,
    	[   MPI_LIBS="-lmpi"  ],
    	[   echo "libmpi not found. exiting..."
        	exit 1  ]
    )
fi    

echo "Try to find liblam ..."
if test -f ${MPI_ROOT}/lib/liblam.a; then
        echo "Found in ${MPI_ROOT}/lib"
        MPI_LIBS="${MPI_LIBS} -llam"
else
    AC_CHECK_LIB(lam, main,
    	[   MPI_LIBS="$MPI_LIBS -llam"  ],
    	[   echo "liblam not found. exiting..."
        	exit 1  ]
    )
fi    

PKG_LIBS="${MPI_LIBS}"
PKG_CPPFLAGS="${MPI_INCLUDE}"

AC_SUBST(PKG_LIBS)
AC_SUBST(PKG_CPPFLAGS)
AC_SUBST(DEFS)

AC_OUTPUT(src/Makevars R/zzz.R)
